Modularized ssh.js so that an IP can be passed in, also used only client.js data

--- a/src/client/public/client.htm
+++ b/src/client/public/client.htm
@@ -18,7 +18,7 @@
         <div id="dropupContent" class="dropup-content"></div>
       </div>
       <div id="footer"></div>
-      <!--<div id="status"></div>-->
+      <div id="status"></div>
       <div id="countdown"></div>
     </div>
   </div>
