Added react client side code. Refactored code on client and server

--- a/src/client/ssh/public/client.htm
+++ b/src/client/ssh/public/client.htm
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>WebSSH2</title>
-  <style>
-    html, body {background-color: #000;height: 100%;margin: 0;}.dropup-content {display: none;}
-  </style>
+  <title>Flimble</title>
   <link rel="stylesheet" href="/ssh/flimble.css" />
   <link rel="icon" href="/ssh/favicon.ico" />
 </head>
