--- a/src/client/ssh/src/client.htm
+++ b/src/client/ssh/src/client.htm
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Flimble</title>
-  <link rel="stylesheet" href="/ssh/flimble.css" />
+  <link rel="stylesheet" href="/ssh/sshTerminal.css" />
   <link rel="icon" href="/ssh/favicon.ico" />
 </head>
 <body>
@@ -10,6 +10,6 @@
     <div id="header"></div>
     <div id="terminal-container" class="terminal"></div>
   </div>
-<script src="/ssh/flimble.bundle.js" defer></script>
+<script src="/ssh/sshTerminal.bundle.js" defer></script>
 </body>
 </html>
